--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,7 @@
-altair==4.1.0
-seaborn==0.11.1
-pandas==1.2.4
-matplotlib==3.4.1
-plotly==4.14.3
-numpy==1.20.2
-streamlit==0.81.0
-joblib==1.0.1
-Pillow==8.2.0
-scikit_learn==0.24.2
+streamlit==1.18.1
+altair==4.2.2
+pandas==1.5.3
+matplotlib==3.6.3
+seaborn==0.12.2
+squarify==0.4.3
+numpy==1.23.5
